# finandance

./: .gitignore  deep-search-pm-fintech.md  design-tokens-nova.json  package.json  skills-lock.json  transaction-history.csv
.agents/: README.md
.husky/: pre-commit
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/api/v1/: budget.py  clients.py  dashboard.py  email_config.py  funding_plans.py  funding_sources.py  income.py  integrations.py  jobs.py  projects.py  transactions.py  webhooks.py
backend/app/core/: auth.py  config.py  crypto.py  db.py  repository.py
backend/app/jobs/: sync_jobs.py
backend/app/models/: audit_log.py  budget.py  dashboard.py  email_config.py  funding_plans.py  funding_sources.py  income.py  integrations.py  projects.py  transactions.py
backend/app/services/: audit_log_service.py  budget_service.py  client_service.py  dashboard_service.py  enable_banking_service.py  exchange_rate_service.py  funding_plan_service.py  income_service.py  kraken_service.py  ledger_service.py  project_service.py  wise_service.py
backend/app/services/email_templates/: __init__.py  bancolombia.py  base.py  revolut.py  sumeria.py  wise.py
backend/scripts/: test_email_parse.py  test_ledger_txns.py
backend/tests/: conftest.py  test_email_templates.py
backend/tests/integration/: test_integrations.py
backend/tests/unit/: test_crypto.py  test_integrations_services.py
frontend/: .prettierignore  package-lock.json  package.json  pnpm-lock.yaml  (+3 more)
(+247 files in other folders)
